Integrated front with the application
Signed-off-by: narvikd <84069271+narvikd@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.9"
 
 services:
-  api:
+  web:
     image: temppaste:latest
-    container_name: temppaste-api
+    container_name: temppaste
     networks:
       - temppaste
 networks:
